[package]
name = "ravalink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
colored = "2.1.0"
dotenvy = "0.15.7"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.22"
nanoid = "0.4.0"
rdkafka = "0.36.2"
redis = { version = "0.26.1", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.125"
serenity = "0.12.2"
songbird = "0.4.2"
tokio = { version = "1.40", features = ["full"] }
symphonia-core = "0.5.2"
symphonia = { version = "0.5.3", features = ['pcm','mp3','wav','isomp4','aac','alac'] }
once_cell = "1.20.1"

[dependencies.ravalink-interconnect]
path = "/home/crysterz/Projects/ravalink-interconnect/"
